--- a/src/template.html
+++ b/src/template.html
@@ -8,6 +8,18 @@
     <title>Team</title>
 </head>
 <body>
+    <header>My Team</header>
+    <div class="container">
+        <div class="card">
+            <div class="card-title"><h4>${manager.name}</h4></div>
+            <div class="card-body">
+                <p>Email:${manager.email}</p>
+                <p>Id: ${manager.ID}</p>
+                <p>Name: ${manager.name}</p>
+                <p>officenumber: ${manager.officenumber}</p>
+            </div>
+        </div>
+    </div>
     
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
