--- a/src/template.html
+++ b/src/template.html
@@ -20,7 +20,28 @@
             </div>
         </div>
     </div>
-    
+    <div class="container">
+        <div class="card">
+            <div class="card-title"><h4>${engineer.name}</h4></div>
+            <div class="card-body">
+                <p>Email:${engineer.email}</p>
+                <p>Id: ${engineer.ID}</p>
+                <p>Name: ${engineer.name}</p>
+                <p>github: ${engineer.github}</p>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="card">
+            <div class="card-title"><h4>${intern.name}</h4></div>
+            <div class="card-body">
+                <p>Email:${intern.email}</p>
+                <p>Id: ${intern.ID}</p>
+                <p>Name: ${intern.name}</p>
+                <p>school: ${intern.school}</p>
+            </div>
+        </div>
+    </div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 </html>
