added engineer test

--- a/src/template.html
+++ b/src/template.html
@@ -43,5 +43,29 @@
         </div>
     </div>
 </body>
+<style>
+    .container {
+        display: flex;
+flex-wrap: wrap;
+justify-content: center;
+margin-top: 20px;
+margin-bottom: 20px;
+}
+.card {
+        padding: 15px;
+border-radius: 7px;
+background-color:grey;
+color: yellowgreen;
+margin: 15px;
+}
+.text {
+        padding: 15px;
+border-radius: 7px;
+background-color:yellowgreen;
+color: black;
+margin: 15px;
+}
+
+</style>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 </html>
